--- a/styles.css
+++ b/styles.css
@@ -8,21 +8,18 @@ body {
     left: 50%;
 }
 
-.header-section {
-
-    background-color: #333;
-}
 
 .header-github {
     position: fixed;
-    top: 10px;
+    top:-2px;
     display: flex;
-    margin: 10px;
+    margin: 20px;
 }
 
 .main-p {
     position: relative;
     top: 75px;
+    text-align: center;
     color: black;
 }
 
